--- a/BookingHutech/wwwroot/views/main.html
+++ b/BookingHutech/wwwroot/views/main.html
@@ -44,18 +44,18 @@
                             <li>
                                 <a><i class="fa fa-bar-chart-o"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> Trình bày dữ liệu </font></font><span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu" style="">
-                                    <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ JS</font></font></a></li>
-                                    <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ JS2</font></font></a></li>
-                                    <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Moris JS</font></font></a></li>
-                                    <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ECharts</font></font></a></li>
-                                    <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ khác</font></font></a></li>
+                                    <li><a href="#/main/dat-xe"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ JS</font></font></a></li>
+                                    <li><a href="#/main/trang-chu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ JS2</font></font></a></li>
+                                    <li><a href="#/main/dat-xe"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Moris JS</font></font></a></li>
+                                    <li><a href="#/main/trang-chu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">ECharts</font></font></a></li>
+                                    <li><a href="#/main/trang-chu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Biểu đồ khác</font></font></a></li>
                                 </ul>
                             </li>
                             <li class="">
                                 <a><i class="fa fa-clone"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Bố cục </font></font><span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu" style="display: none;">
-                                    <li><a href="https://colorlib.com/polygon/gentelella/fixed_sidebar.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Thanh bên cố định</font></font></a></li>
-                                    <li><a href="https://colorlib.com/polygon/gentelella/fixed_footer.html"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Chân trang cố định</font></font></a></li>
+                                    <li><a href="#/main/dat-xe"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Thanh bên cố định</font></font></a></li>
+                                    <li><a href="#/main/trang-chu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Chân trang cố định</font></font></a></li>
                                 </ul>
                             </li>
                         </ul>
