--- a/BookingHutech/wwwroot/views/pages/home/home.html
+++ b/BookingHutech/wwwroot/views/pages/home/home.html
@@ -163,12 +163,12 @@
                         <h4>Booking Meeting Hall</h4>
                     </div>
                     <div class="mb15 mt30">
-                        <a href="#/main/Dat-Hoi-Truong">
-                            <button class="btn btn-danger btn-round btn-block" type="submit">
+                        <a href="#/main/Dat-Hoi-Truong"></a>
+                            <button class="btn btn-primary btn-round btn-block" ng-click="bookingMeetingHall()">
                                 <i class="fa fa-arrow-circle-right"></i>
                                 <span>ĐẶT HỘI TRƯỜNG</span>
                             </button>
-                        </a>
+                        
                     </div>
                 </div>
             </div>
