--- a/BookingHutech/wwwroot/views/pages/account/changePassword.html
+++ b/BookingHutech/wwwroot/views/pages/account/changePassword.html
@@ -7,7 +7,7 @@
     <link href="../../../../Content/login.css" rel="stylesheet" />
 </head>
 <body>
-    <div data-ng-controller="mainController" style="margin-top: 100px">
+    <div data-ng-controller="ChangePasswordController" style="margin-top: 100px">
         <div class="center-content">
             <div class="row no-margin">
                 <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
