--- a/BookingHutech/wwwroot/views/pages/account/login.html
+++ b/BookingHutech/wwwroot/views/pages/account/login.html
@@ -13,6 +13,7 @@
                             <img src="../../../../images/logo/logo.jpg" height="100" style="margin-top:-70px" class="shadow" />
                         </div>  
                         <div class="form-inputs">
+                            <label style="color: red">{{'CookiesInconrect'| translate}}</label>
                             <div class="form-group has-feedback">
                                 <label></label>
                                 <input type="text" class="form-control" value="UserName" data-ng-model="UserName" placeholder="UserName">
@@ -37,9 +38,9 @@
             </div>
         </div>
     </div>
-    <!--<div id="loading" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999" ng-show="false">
+    <div id="loading" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999" ng-show="false">
         <div style="position:fixed;background-color:white;opacity:0.6;width:100%;height:100%;z-index:9999"></div>
         <img style="position:fixed;z-index:9999;top:45%;left:48%" src="../../images/loading/loading.gif" width="100" />
-    </div>-->
+    </div>
 </body>
 </html>
